--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Index</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="styleLogin.css">
+        <link rel="stylesheet" href="../css/styleLogin.css">
 
     </head>
     <body>
@@ -15,11 +15,11 @@
                     <h1 class="h3 mb-3 fw-normal">Login</h1>
                 
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="name@example.com">
                         <label for="floatingInput">Usuário</label>
                     </div>
                     <div class="form-floating">
-                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
                         <label for="floatingPassword">Senha</label>
                     </div>
                 
@@ -28,5 +28,6 @@
                 </form>
             </main>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
