--- a/views/index.html
+++ b/views/index.html
@@ -1,33 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <title>Index</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/styleLogin.css">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styleLogin.css">
+</head>
+<body>
+    <div class="containerLogin">
+        <main class="form-signin w-100 m-auto">
+            <form id="loginForm">
+                <h1 class="h3 mb-3 fw-normal">Login</h1>
+            
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="name" name="name" placeholder="name@example.com">
+                    <label for="floatingInput">Usuário</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+                    <label for="floatingPassword">Senha</label>
+                </div>
+            
+                <button class="btn btn-primary w-100 py-2" type="submit">Entrar</button>
+            </form>
+            <div id="message"></div>
+        </main>
+    </div>
 
-    </head>
-    <body>
-        <div class="containerLogin">
-            <main class="form-signin w-100 m-auto">
-                <form>
-                    <h1 class="h3 mb-3 fw-normal">Login</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#loginForm').on('submit', function(event) {
+                event.preventDefault();
                 
-                    <div class="form-floating">
-                        <input type="text" class="form-control" id="name" name="name" placeholder="name@example.com">
-                        <label for="floatingInput">Usuário</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Password">
-                        <label for="floatingPassword">Senha</label>
-                    </div>
-                
-
-                    <button class="btn btn-primary w-100 py-2" type="submit">Entrar</button>
-                </form>
-            </main>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+                $.ajax({
+                    type: 'POST',
+                    url: '../php/login.php',
+                    data: $(this).serialize(),
+                    success: function(response) {
+                        if (response.trim() === 'success') {
+                            console.log('aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa')
+                        } else {
+                            $('#message').html('<div class="alert alert-danger">' + response + '</div>');
+                        }
+                    },
+                    error: function() {
+                        $('#message').html('<div class="alert alert-danger">Erro ao processar a solicitação.</div>');
+                    }
+                });
+            });
+        });
+    </script>
+</body>
 </html>
