--- a/views/index.html
+++ b/views/index.html
@@ -42,6 +42,7 @@
                     success: function(response) {
                         if (response.trim() === 'success') {
                             console.log('aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa')
+                            window.location.href = 'menu.html';
                         } else {
                             $('#message').html('<div class="alert alert-danger">' + response + '</div>');
                         }
