--- a/views/menu.html
+++ b/views/menu.html
@@ -1,49 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styleMenu.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="py-3 mb-3 border-bottom">
+    <header class="py-3 mb-3">
         <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
-          <div class="dropdown">
-            <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            </a>
-            <ul class="dropdown-menu text-small shadow">
-              <li><a class="dropdown-item active" href="#" aria-current="page">Overview</a></li>
-              <li><a class="dropdown-item" href="#">Inventory</a></li>
-              <li><a class="dropdown-item" href="#">Customers</a></li>
-              <li><a class="dropdown-item" href="#">Products</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Reports</a></li>
-              <li><a class="dropdown-item" href="#">Analytics</a></li>
-            </ul>
-          </div>
-    
-          <div class="d-flex align-items-center">
-            <form class="w-100 me-3" role="search">
-              <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
-    
-            <div class="flex-shrink-0 dropdown">
-              <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-              </a>
-              <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
-              </ul>
+            <div class="dropdown">
+                <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+                </a>
+                <ul class="dropdown-menu text-small shadow">
+                    <li><a class="dropdown-item" href="#">Adicionar Novo item</a></li>
+                    <li><a class="dropdown-item" href="#">Usuários</a></li>
+                </ul>
             </div>
-          </div>
+        
+            <div class="d-flex align-items-center">
+                <form class="w-100 me-3" role="search">
+                    <input type="search" class="form-control" placeholder="Pesquisar..." aria-label="Search" id="search">
+                </form>
+        
+                <div class="flex-shrink-0 dropdown">
+                    <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="../images/user.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu text-small shadow">
+                        <li><a class="dropdown-item" href="#">Perfil</a></li>
+                        <li><a class="dropdown-item" href="#">Configurações</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Sair</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </header>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </header>
+
+    <div class="container">
+        <h2 class="text-center">Produtos</h2>
+        <div class="d-flex justify-content-center">
+            <table id="productsTable" class="table table-striped table-hover">
+                <thead class="table-header-center">
+                    <tr>
+                        <th>Código</th>
+                        <th>Nome do Produto</th>
+                        <th>Descrição do Produto</th>
+                        <th>Preço</th>
+                        <th>Quantidade</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://kit.fontawesome.com/4327c32687.js" crossorigin="anonymous"></script>
+    
+    <script>
+       $(document).ready(function() {
+    let table = $('#productsTable').DataTable({
+        "ajax": {
+            "url": "../php/busca_produtos.php",
+            "type": "GET",
+            "data": function(d) {
+                d.search = $('#search').val(); 
+            },
+        },
+        "columns": [
+            { "data": "cdProduto", "class": "table-cell-center" },
+            { "data": "nmProduto", "class": "table-cell-center" },
+            { "data": "descProduto", "class": "table-cell-center" },
+            { "data": "preco", "class": "table-cell-center" },
+            { "data": "quantidade", "class": "table-cell-center" },
+            { 
+                "data": null,
+                "class": "table-cell-center",
+                "render": function(data, type, row) {
+                    return `
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn" title="Aumentar estoque" onclick="editarProduto(${row.cdProduto})">
+                                <i class="far fa-square-plus"></i>Adicionar
+                            </button>
+                            <button type="button" class="btn" title="Diminuir estoque" onclick="excluirProduto(${row.cdProduto})">
+                                <i class="far fa-square-minus"></i>Remover
+                            </button>
+                        </div>
+                    `;
+                }
+            }
+        ],
+        "searching": false,
+        "language": {
+            "sLengthMenu": "Mostrando _MENU_ registros",
+            "sSearch": "Pesquisar:",
+            "sZeroRecords": "Nenhum registro encontrado",
+            "sInfo": "Mostrando _START_ até _END_ de _TOTAL_ registros",
+            "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
+            "sInfoFiltered": "(filtrado de _MAX_ registros no total)",
+            "oPaginate": {
+                "sFirst": "Primeiro",
+                "sLast": "Último",
+                "sNext": "Próximo",
+                "sPrevious": "Anterior"
+            }
+        }
+    });
+
+    $('#search').on('keyup', function() {
+        table.ajax.reload(); 
+    });
+});
+
+    </script>
 </body>
 </html>
