--- a/views/index.html
+++ b/views/index.html
@@ -24,9 +24,14 @@
             
                 <button class="btn btn-primary w-100 py-2" type="submit">Entrar</button>
             </form>
-            <div id="message"></div>
+            
         </main>
     </div>
+
+    <footer class="fixed-bottom">
+        <div id="message"></div>
+    </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -41,7 +46,7 @@
                     data: $(this).serialize(),
                     success: function(response) {
                         if (response.trim() === 'success') {
-                            console.log('aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa')
+                            console.log('Login successful');
                             window.location.href = 'menu.html';
                         } else {
                             $('#message').html('<div class="alert alert-danger">' + response + '</div>');
