--- a/views/menu.html
+++ b/views/menu.html
@@ -33,7 +33,7 @@
                         <li><a class="dropdown-item" href="#">Perfil</a></li>
                         <li><a class="dropdown-item" href="#">Configurações</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Sair</a></li>
+                        <li><a class="dropdown-item" href="index.html">Sair</a></li>
                     </ul>
                 </div>
             </div>
@@ -41,7 +41,7 @@
     </header>
 
     <div class="container">
-        <h2 class="text-center">Produtos</h2>
+        <h2 class="text" style="margin-bottom: 30px;">Produtos</h2>
         <div class="d-flex justify-content-center">
             <table id="productsTable" class="table table-striped table-hover">
                 <thead class="table-header-center">
@@ -51,7 +51,7 @@
                         <th>Descrição do Produto</th>
                         <th>Preço</th>
                         <th>Quantidade</th>
-                        <th>Ações</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody></tbody>
@@ -78,7 +78,13 @@
             { "data": "cdProduto", "class": "table-cell-center" },
             { "data": "nmProduto", "class": "table-cell-center" },
             { "data": "descProduto", "class": "table-cell-center" },
-            { "data": "preco", "class": "table-cell-center" },
+            { 
+              "data": "preco",
+              "class": "table-cell-center",
+              "render": function(data, type, row) {
+                  return 'R$' + parseFloat(data).toFixed(2).replace('.', ',');
+              }
+            },
             { "data": "quantidade", "class": "table-cell-center" },
             { 
                 "data": null,
@@ -86,11 +92,17 @@
                 "render": function(data, type, row) {
                     return `
                         <div class="btn-group" role="group">
-                            <button type="button" class="btn" title="Aumentar estoque" onclick="editarProduto(${row.cdProduto})">
+                            <button type="button" class="btn" title="Aumentar estoque" onclick="aumentaEstoque(${row.cdProduto})">
                                 <i class="far fa-square-plus"></i>Adicionar
                             </button>
-                            <button type="button" class="btn" title="Diminuir estoque" onclick="excluirProduto(${row.cdProduto})">
+                            <button type="button" class="btn" title="Diminuir estoque" onclick="diminuiEstoque(${row.cdProduto})">
                                 <i class="far fa-square-minus"></i>Remover
+                            </button>
+                            <button type="button" class="btn" title="Editar produto" onclick="editarProduto(${row.cdProduto})">
+                                <i class="fa-solid fa-pen-to-square"></i>Editar
+                            </button>
+                            <button type="button" class="btn" title="Deletar produto" onclick="deleteProduto(${row.cdProduto})">
+                                <i class="fa-solid fa-trash-can"></i>Deletar
                             </button>
                         </div>
                     `;
