--- a/views/menu.html
+++ b/views/menu.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styleMenu.css">
     <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
-
     <title>Document</title>
 </head>
 <body>
@@ -68,180 +67,181 @@
     
     <script>
       $(document).ready(function() {
-    let table = $('#productsTable').DataTable({
-        "ajax": {
-            "url": "../php/busca_produtos.php",
-            "type": "GET",
-            "data": function(d) {
-                d.search = $('#search').val(); 
-            },
-        },
-        "columns": [
-            { "data": "cdProduto", "class": "table-cell-center" },
-            { "data": "nmProduto", "class": "table-cell-center" },
-            { "data": "descProduto", "class": "table-cell-center" },
-            { 
-              "data": "preco",
-              "class": "table-cell-center",
-              "render": function(data, type, row) {
-                  return 'R$' + parseFloat(data).toFixed(2).replace('.', ',');
+          let table = $('#productsTable').DataTable({
+              "ajax": {
+                  "url": "../php/busca_produtos.php",
+                  "type": "GET",
+                  "data": function(d) {
+                      d.search = $('#search').val(); 
+                  },
+              },
+              "columns": [
+                  { "data": "cdProduto", "class": "table-cell-center" },
+                  { "data": "nmProduto", "class": "table-cell-center" },
+                  { "data": "descProduto", "class": "table-cell-center" },
+                  { 
+                      "data": "preco",
+                      "class": "table-cell-center",
+                      "render": function(data, type, row) {
+                          return 'R$' + parseFloat(data).toFixed(2).replace('.', ',');
+                      }
+                  },
+                  { "data": "quantidade", "class": "table-cell-center" },
+                  { 
+                      "data": null,
+                      "class": "table-cell-center",
+                      "render": function(data, type, row) {
+                          return `
+                              <div class="btn-group" role="group">
+                                  <button type="button" class="btn d-flex flex-column align-items-center" title="Aumentar estoque" onclick="aumentaEstoque(${row.cdProduto})">
+                                      <i class="far fa-square-plus"></i>
+                                      <span>Adicionar</span>
+                                  </button>
+                                  <button type="button" class="btn d-flex flex-column align-items-center" title="Diminuir estoque" onclick="diminuiEstoque(${row.cdProduto})">
+                                      <i class="far fa-square-minus"></i>
+                                      <span>Remover</span>
+                                  </button>
+                                  <button type="button" class="btn d-flex flex-column align-items-center" title="Editar produto" onclick="editarProduto(${row.cdProduto})">
+                                      <i class="fa-solid fa-pen-to-square"></i>
+                                      <span>Editar</span>
+                                  </button>
+                                  <button type="button" class="btn d-flex flex-column align-items-center" title="Deletar produto" onclick="deleteProduto(${row.cdProduto})">
+                                      <i class="fa-solid fa-trash-can"></i>
+                                      <span>Deletar</span>
+                                  </button>
+                              </div>
+                          `;
+                      }
+                  }
+              ],
+              "searching": false,
+              "language": {
+                  "sLengthMenu": "Mostrando _MENU_ registros",
+                  "sSearch": "Pesquisar:",
+                  "sZeroRecords": "Nenhum registro encontrado",
+                  "sInfo": "Mostrando _START_ até _END_ de _TOTAL_ registros",
+                  "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
+                  "sInfoFiltered": "(filtrado de _MAX_ registros no total)",
+                  "oPaginate": {
+                      "sFirst": "Primeiro",
+                      "sLast": "Último",
+                      "sNext": "Próximo",
+                      "sPrevious": "Anterior"
+                  }
               }
-            },
-            { "data": "quantidade", "class": "table-cell-center" },
-            { 
-                "data": null,
-                "class": "table-cell-center",
-                "render": function(data, type, row) {
-                    return `
-                        <div class="btn-group" role="group">
-                            <button type="button" class="btn" title="Aumentar estoque" onclick="aumentaEstoque(${row.cdProduto})">
-                                <i class="far fa-square-plus"></i>Adicionar
-                            </button>
-                            <button type="button" class="btn" title="Diminuir estoque" onclick="diminuiEstoque(${row.cdProduto})">
-                                <i class="far fa-square-minus"></i>Remover
-                            </button>
-                            <button type="button" class="btn" title="Editar produto" onclick="editarProduto(${row.cdProduto})">
-                                <i class="fa-solid fa-pen-to-square"></i>Editar
-                            </button>
-                            <button type="button" class="btn" title="Deletar produto" onclick="deleteProduto(${row.cdProduto})">
-                                <i class="fa-solid fa-trash-can"></i>Deletar
-                            </button>
-                        </div>
-                    `;
-                }
-            }
-        ],
-        "searching": false,
-        "language": {
-            "sLengthMenu": "Mostrando _MENU_ registros",
-            "sSearch": "Pesquisar:",
-            "sZeroRecords": "Nenhum registro encontrado",
-            "sInfo": "Mostrando _START_ até _END_ de _TOTAL_ registros",
-            "sInfoEmpty": "Mostrando 0 até 0 de 0 registros",
-            "sInfoFiltered": "(filtrado de _MAX_ registros no total)",
-            "oPaginate": {
-                "sFirst": "Primeiro",
-                "sLast": "Último",
-                "sNext": "Próximo",
-                "sPrevious": "Anterior"
-            }
-        }
-    });
+          });
 
-    $('#search').on('keyup', function() {
-        table.ajax.reload(); 
-    });
-});
-
+          $('#search').on('keyup', function() {
+              table.ajax.reload(); 
+          });
+      });
 
       function deleteProduto(cdProduto) {
-    Swal.fire({
-        html: "<h5 style='color:black; text-align: center;'>Tem certeza que quer deletar esse produto?</h5>",
-        text: "Não será possível reverter depois",
-        icon: "warning",
-        background: "#fff",
-        showCancelButton: true,
-        confirmButtonColor: "#3085d6",
-        cancelButtonColor: "#d33",
-        confirmButtonText: "Deletar",
-        cancelButtonText: "Cancelar",
-        customClass: {
-            content: 'text-center'
-        }
-    }).then((result) => {
-        if (result.isConfirmed) {
-            $.ajax({
-                type: 'POST',
-                url: '../php/excluir_produtos.php',
-                data: { cdProduto: cdProduto }, 
-                success: function(response) {
-                    if (response.trim() === 'success') {
-                      $("#productsTable").DataTable().ajax.reload();
+          Swal.fire({
+              html: "<h5 style='color:black; text-align: center;'>Tem certeza que quer deletar esse produto?</h5>",
+              text: "Não será possível reverter depois",
+              icon: "warning",
+              background: "#fff",
+              showCancelButton: true,
+              confirmButtonColor: "#3085d6",
+              cancelButtonColor: "#d33",
+              confirmButtonText: "Deletar",
+              cancelButtonText: "Cancelar",
+              customClass: {
+                  content: 'text-center'
+              }
+          }).then((result) => {
+              if (result.isConfirmed) {
+                  $.ajax({
+                      type: 'POST',
+                      url: '../php/excluir_produtos.php',
+                      data: { cdProduto: cdProduto }, 
+                      success: function(response) {
+                          if (response.trim() === 'success') {
+                              $("#productsTable").DataTable().ajax.reload();
 
-                        Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Produto Deletado</h5>",
-                            background: "#fff",
-                            icon: "success"
-                          })
+                              Swal.fire({
+                                  html: "<h5 style='color:black; text-align: center;'>Produto Deletado</h5>",
+                                  background: "#fff",
+                                  icon: "success"
+                              })
 
-                    } else {
-                        Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
-                            background: "#fff",
-                            icon: "error"
-                        });
-                    }
-                },
-                error: function() {
-                    Swal.fire({
-                        html: "<h5 style='color:black; text-align: center;'>Houve um erro ao processar a solicitação.</h5>",
-                        background: "#fff",
-                        icon: "error"
-                    });
-                }
-            });
-            $("#productsTable").DataTable().ajax.reload(null, false);
-        }
-    });
-}
+                          } else {
+                              Swal.fire({
+                                  html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
+                                  background: "#fff",
+                                  icon: "error"
+                              });
+                          }
+                      },
+                      error: function() {
+                          Swal.fire({
+                              html: "<h5 style='color:black; text-align: center;'>Houve um erro ao processar a solicitação.</h5>",
+                              background: "#fff",
+                              icon: "error"
+                          });
+                      }
+                  });
+                  $("#productsTable").DataTable().ajax.reload(null, false);
+              }
+          });
+      }
 
       function diminuiEstoque(cdProduto){
-        $.ajax({
-                type: 'POST',
-                url: '../php/diminuiEstoque.php',
-                data: { cdProduto: cdProduto }, 
-                success: function(response) {
-                    if (response.trim() === 'success') {
+          $.ajax({
+              type: 'POST',
+              url: '../php/diminuiEstoque.php',
+              data: { cdProduto: cdProduto }, 
+              success: function(response) {
+                  if (response.trim() === 'success') {
                       $("#productsTable").DataTable().ajax.reload(null, false);
 
-                    } else {
+                  } else {
                       Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
-                            background: "#fff",
-                            icon: "error"
-                        });
-                    }
-                },
-                error: function() {
+                          html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
+                          background: "#fff",
+                          icon: "error"
+                      });
+                  }
+              },
+              error: function() {
                   Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
-                            background: "#fff",
-                            icon: "error"
-                        });
-                }
-            });
-            $("#productsTable").DataTable().ajax.reload(null, false);
+                      html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
+                      background: "#fff",
+                      icon: "error"
+                  });
+              }
+          });
+          $("#productsTable").DataTable().ajax.reload(null, false);
       }
 
       function aumentaEstoque(cdProduto){
-        $.ajax({
-                type: 'POST',
-                url: '../php/aumentaEstoque.php',
-                data: { cdProduto: cdProduto }, 
-                success: function(response) {
-                    if (response.trim() === 'success') {
+          $.ajax({
+              type: 'POST',
+              url: '../php/aumentaEstoque.php',
+              data: { cdProduto: cdProduto }, 
+              success: function(response) {
+                  if (response.trim() === 'success') {
                       $("#productsTable").DataTable().ajax.reload(null, false);
 
-                    } else {
+                  } else {
                       Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
-                            background: "#fff",
-                            icon: "error"
-                        });
-                    }
-                },
-                error: function() {
+                          html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
+                          background: "#fff",
+                          icon: "error"
+                      });
+                  }
+              },
+              error: function() {
                   Swal.fire({
-                            html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
-                            background: "#fff",
-                            icon: "error"
-                        });
-                }
-            });
-            $("#productsTable").DataTable().ajax.reload(null, false);
+                      html: "<h5 style='color:black; text-align: center;'>Erro: " + response + "</h5>",
+                      background: "#fff",
+                      icon: "error"
+                  });
+              }
+          });
+          $("#productsTable").DataTable().ajax.reload(null, false);
       }
-      
-
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 </body>
