--- a/views/menu.html
+++ b/views/menu.html
@@ -16,7 +16,7 @@
                   <i class="fa-solid fa-bars" style="margin-left: 10px; font-size: 30px;"></i>  
                 </a>
                 <ul class="dropdown-menu text-small shadow">
-                    <li><a class="dropdown-item" href="#">Adicionar Novo item</a></li>
+                    <li><a class="dropdown-item" href="#">Produtos</a></li>
                     <li><a class="dropdown-item" href="#">Usuários</a></li>
                 </ul>
             </div>
