Agora é preciso estar logado em todos os .php

--- a/views/menu.html
+++ b/views/menu.html
@@ -13,10 +13,10 @@
         <div class="container-fluid d-grid gap-3 align-items-center" style="grid-template-columns: 1fr 2fr;">
             <div class="dropdown">
                 <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="fa-solid fa-bars" style="margin-left: 10px; font-size: 30px;"></i>  
+                    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
                 </a>
                 <ul class="dropdown-menu text-small shadow">
-                    <li><a class="dropdown-item" href="#">Produtos</a></li>
+                    <li><a class="dropdown-item" href="#">Adicionar Novo item</a></li>
                     <li><a class="dropdown-item" href="#">Usuários</a></li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
     </header>
 
     <div class="container">
-        <h2 class="text" style="margin-bottom: 30px; margin-left: 60px;">Produtos</h2>
+        <h2 class="text" style="margin-bottom: 30px;">Produtos</h2>
         <div class="d-flex justify-content-center">
             <table id="productsTable" class="table table-striped table-hover">
                 <thead class="table-header-center">
