Problema do ajax resolvido.

--- a/views/menu.html
+++ b/views/menu.html
@@ -74,6 +74,9 @@
                   "data": function(d) {
                       d.search = $('#search').val(); 
                   },
+                  "error": function(data) {
+                        alert(data.error().getResponseHeader());
+                  },
               },
               "columns": [
                   { "data": "cdProduto", "class": "table-cell-center" },
