--- a/css/styleMenu.css
+++ b/css/styleMenu.css
@@ -34,7 +34,7 @@ div.dataTables_wrapper .dataTables_paginate .paginate_button.current {
 
 div.dataTables_wrapper .dataTables_paginate .paginate_button:first-child,
 div.dataTables_wrapper .dataTables_paginate .paginate_button:last-child {
-    margin-right: 0; 
+    margin-right: 5px; 
 }
 
 .table-header-center {
